fix(advantages): less aggressive z-index

--- a/app/styles/blocks/advantages.styl
+++ b/app/styles/blocks/advantages.styl
@@ -34,7 +34,7 @@
 	&-arrow
 		position absolute
 		top 210px
-		z-index 200
+		z-index 5
 		width 42px
 		height 50px
 		border 3px solid #d4d4d4
